homepage/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: homepage
  type: LoadBalancer
  ports:
    - port: 3000               # < port to open on the outside on the server
      targetPort: 3000         # < targetport. port on the pod to passthrough
      name: homepage             # < reference name for the port in the deployment yaml
      protocol: TCP
